# cpp-playground

./: .clang-format  .clang-tidy  .clangd  CMakeLists.txt  Makefile  README.md
.devcontainer/: Dockerfile  devcontainer.json
examples/: example.cpp
include/: template.hpp
include/plotter/: jsonize.hpp  plotter.hpp  publisher.hpp  types.hpp
src/: example.cpp  main.cpp
src/plotter/: jsonize.cpp  publisher.cpp
tests/: jsonize_tests.cpp
